--- a/css/popup.css
+++ b/css/popup.css
@@ -85,12 +85,14 @@ ul.navigator li:hover {
 	text-transform: uppercase;
 	font-size: 12px;
 	font-weight: 300;
+	border-bottom: 2px solid #0293ff;
 }
 #header-menu li.on {
 	background-color: #fff;
 	color: #0293ff;
+	border-bottom: 2px solid #fff;
 }
-#header-menu li:not(.on):hover {
+#header-menu li:hover {
 	border-bottom: 2px solid #fff;
 }
 #user-avatar {
