--- a/css/dialog.css
+++ b/css/dialog.css
@@ -113,10 +113,43 @@
 	display: block;
 	list-style: none;
 	background-color: #fff;
-	margin-bottom: 3px;
-	padding: 2px;
+	padding: 5px;	
+	border-top: 1px solid #ccc;
+	-webkit-transition: background-color .2s ease;
+	   -moz-transition: background-color .2s ease;
+	    -ms-transition: background-color .2s ease;
+	     -o-transition: background-color .2s ease;
+	        transition: background-color .2s ease;
+}
+.themes-list .theme-item:not(.closed) {
 	cursor: pointer;
+}
+.themes-list .theme-item.closed{
+	color: #ccc;
 }
 .themes-list .theme-item:before {
 	margin-right: 5px;
+}
+.themes-list .theme-item:after {
+	display: block;
+	content: " ";
+	clear: both;
+}
+.themes-list .theme-item:hover {
+	background-color: #f5f5f5;
+}
+.theme-name {
+	display: inline-block;;
+	margin-bottom: 3px;
+	font-weight: bold;
+}
+.theme-image {
+	clear: both;
+	float: right;
+	width: 60px;
+	margin: 2px;
+}
+.theme-description {
+	font-size: 12px;
+	display: block;
 }
