--- a/css/popup.css
+++ b/css/popup.css
@@ -271,6 +271,18 @@ ul.navigator li:hover {
 	padding: 10px;
 	box-shadow: 0 1px 2px #d9d9d9;
 }
+.message.conversation {
+	border-color: #0293ff;
+	box-shadow: 0 1px 5px #0293ff;
+}
+.conversation .message {
+	border: none;
+	box-shadow: none;
+	margin:0;
+	padding: 10px 0;
+	margin-top: 5px;
+	border-top: 2px solid #ddd;
+}
 
 .msg_header {
 	font-size:1em;
