--- a/css/popup.css
+++ b/css/popup.css
@@ -466,8 +466,46 @@ ul.navigator li:hover {
     opacity: 1;
 }
 .message.conversation {
-	border-color: #004862;
-	box-shadow: 0 1px 5px #004862;
+	border-color: #aaa;
+	box-shadow: none;
+	margin-top: 0;
+}
+.message.conversation.mark {
+	margin-bottom: 0;
+	border-bottom: none;	
+	position: relative;
+	opacity:0;
+	transition: opacity .5s ease;
+}
+.message.conversation.mark.show {
+	opacity:1;
+}
+.message.conversation.mark:after {
+	display: block;
+	content:  " ";
+	background-color: #fff;
+	border-right: 1px solid #aaa;
+	border-bottom: 1px solid #aaa;
+	position: absolute;
+	left: 200px;
+	bottom: -6px;
+	width: 10px;
+	height: 10px;
+	-webkit-transform: rotate(45deg);
+	z-index: 50;
+}
+.message.conversation.mark.forwarded:before {
+	display: block;
+	position: absolute;
+	content: "mensaje original";
+	left: 150px;
+	top: 38px;
+	font-size: 12px;
+	background-color: #fff;
+	border: 1px solid #ddd;
+	border-radius: 10px;
+	padding: 1px 5px;
+	z-index: 50;
 }
 .conversation .message {
 	border: none;
