--- a/css/popup.css
+++ b/css/popup.css
@@ -164,8 +164,8 @@ ul.navigator li:hover {
 #messages-header .search {
 	float: right;
 	background-color: #fff;
-	/* border-radius: 3px; */
 	border: 1px solid #fff;
+	/*display: none;*/
 }
 #messages-header .search a {
 	border: 0;
