--- a/css/tree.css
+++ b/css/tree.css
@@ -1,45 +1,51 @@
 /* Arbol de mensajes de un hilo */
-.node {
-	
+#tree {
+	padding: 5px;
 }
-.item {
-		
-	border-bottom: 1px dotted black;
-	height: 30px;
-}	
-.node.last{
-
+.node {
+	border-left: 1px dotted black;
+	padding-left: 10px;
+}
+.node:last-child {
+	height: 41px;
 }
 .node:after {
-		visibility: hidden;
-        display: block;
-        font-size: 0;
-        content: " ";
-        clear: both;
-        height: 0;
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0; 
 }
+.item {
+	position: relative;
+	padding-top: 10px;
+
+}
+.item:before {
+	border-top: 1px dotted black;
+	content: " ";
+	position: absolute;
+	top: 40px;
+	left: -10px;
+	width: 10px;
+}
+
 .node .message {
 	margin: 0;
-	margin-left: 10px;
 }
 
 .children {
 	overflow: hidden;
 	clear: both;
-	margin-left: 20px;
+	
+	
+	padding-left: 10px;
 }
 .children.on {
 	height: auto;
-	border-left: 1px dotted black;
+	
 
-}
-.item:after {
-	visibility: hidden;
-        display: block;
-        font-size: 0;
-        content: " ";
-        clear: both;
-        height: 0;
 }
 
 .more {
