--- a/css/tree.css
+++ b/css/tree.css
@@ -1,6 +1,29 @@
+/* toolbar del  hilo */
+.tree-toolbar {
+	position: fixed;
+	z-index: 80;
+	width: 440px;
+	padding: 5px;
+	display: none;
+}
+#tree-board.switch .tree-toolbar {
+	display: block;
+}
+.tree-toolbar .btn {
+	padding: 3px 5px;
+	cursor: pointer;
+}
+
+#closetree {
+	float: left;
+}
+#show-d3 {
+	float: right;
+}
+
 /* Arbol de mensajes de un hilo */
 #tree {
-	padding: 5px;
+	padding: 30px 5px;
 }
 .node .node {
 	border-left: 1px solid #bbb;
@@ -33,8 +56,8 @@
 
 .children {
 	overflow: hidden;
-	clear: both;
 	padding-left: 10px;
+	height: 20px;
 }
 .children.on {
 	height: auto;
@@ -42,13 +65,8 @@
 
 .more {
 	cursor: pointer;
-	background-color: orange;
-	width: 100px;
-	font-size: 1em;
-	height: 1.5em;
-	background-image: url('/icon/more.png');
-	background-repeat: no-repeat;
-	padding-left: 15px;
+	content: " ";
+	margin-left: -5px;
 }
 
 .more.on {
