--- a/css/popup.css
+++ b/css/popup.css
@@ -441,7 +441,11 @@ ul.navigator li:hover {
 /* Profile */
 #profile-section {
 	overflow: auto;
-	padding: 10px;
+	padding: 20px;
+	margin: 20px;
+	box-shadow: 0px 0px 20px 0px rgba(50, 50, 50, 0.75);
+	border: 1px solid #ccc;
+	height: 470px;
 }
 #profile-section .info {
 	height: 65px;
@@ -710,7 +714,6 @@ span.time-tooltip span:first-child {
 .selector-item {
 	padding: 5px;
 	border-top: 1px solid #666;
-	transition: height .25s ease;
 }
 
 .selector h4 {
@@ -732,9 +735,13 @@ span.time-tooltip span:first-child {
 	overflow-y: scroll;
 	padding: 0;
 	margin: 0;
+	transition: height .25s ease;
 }
 .selector-item.on ul {
-	height: 270px;
+	height: 210px;
+}
+.selector-item.on h4 {
+	border-bottom: 1px dotted #ccc;
 }
 .selector li {
 	list-style: none;
@@ -783,5 +790,3 @@ span.time-tooltip span:first-child {
 #follow-me {
 	
 }
-
-
