--- a/css/popup.css
+++ b/css/popup.css
@@ -781,11 +781,11 @@ span.time-tooltip span:first-child {
 	font-weight: bold;
 }
 .selector .ptheme-description {
-	width: 300px;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
 	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow-y: scroll;
+	width: 300px;
 	color: #666;
 }
 .selector .unfollow {
