--- a/css/tree.css
+++ b/css/tree.css
@@ -24,11 +24,22 @@
 /* Arbol de mensajes de un hilo */
 #tree {
 	padding: 30px 5px;
+	display: table;
 }
 .node .node {
 	border-left: 1px solid #bbb;
 	padding-left: 8px;
+	-webkit-transition: padding-left .5s linear;
+	   -moz-transition: padding-left .5s linear;
+	    -ms-transition: padding-left .5s linear;
+	     -o-transition: padding-left .5s linear;
+	        transition: padding-left .5s linear;
 }
+.no-indent .node .node {
+	padding-left: 0;
+	border-color: transparent;
+}
+
 .node:last-child {
 	border: none;
 }
@@ -50,17 +61,31 @@
 	border-left: 1px solid #bbb;
 }
 
+.no-indent .item:before {
+	display: none;
+}
+
 .node .message {
 	margin: 0;
+	width: 380px;
 }
 
 .children {
-	overflow: hidden;
+	overflow: hidden; 
 	padding-left: 10px;
 	height: 20px;
+	-webkit-transition: padding-left .5s linear;
+	   -moz-transition: padding-left .5s linear;
+	    -ms-transition: padding-left .5s linear;
+	     -o-transition: padding-left .5s linear;
+	        transition: padding-left .5s linear;
 }
 .children.on {
 	height: auto;
+}
+
+.no-indent .children {
+	padding-left: 0;
 }
 
 .more {
@@ -73,4 +98,10 @@
 	background-color: white;
 	background-image: url('/icon/less.png');
 	border-left: 1px dotted black;
+}
+.no-indent .more {
+    height: 0;
+	
+    overflow: hidden;
+    /* padding: 0; */
 }
