--- a/css/d3Thread.css
+++ b/css/d3Thread.css
@@ -7,9 +7,10 @@ svg {
 }
 
 .node circle {
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px;
+  fill: #F25600;
+  stroke: #fff;
+  stroke-width: 1px;
+  cursor: pointer;
 }
 
 .node {
@@ -18,6 +19,6 @@ svg {
 
 .link {
   fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px;
+  stroke: #999;
+  stroke-width: .5px;
 }
