--- a/css/tree.css
+++ b/css/tree.css
@@ -2,23 +2,42 @@
 .tree-toolbar {
 	position: fixed;
 	z-index: 80;
-	width: 440px;
+	width: 100%;
 	padding: 5px;
 	display: none;
+	background-color: rgba(242, 86, 0, .8);
+	/* height: 20px; */
+	top: 90px;
 }
 #tree-board.switch .tree-toolbar {
 	display: block;
 }
 .tree-toolbar .btn {
-	padding: 3px 5px;
+	padding: 5px;
 	cursor: pointer;
+	font-size: 12px;
+	border: 1px solid transparent;
+	color: #fff;
+}
+.tree-toolbar .btn.on {
+	border-top-color: rgba(0,0,0,.3);
+	border-left-color: rgba(0,0,0,.3);
+	border-bottom-color: rgba(255,255,255,.4);
+	border-right-color: rgba(255,255,255,.4);	
+}
+.tree-toolbar .btn:hover {
+	background-color: #F25600;
+}
+.tree-toolbar .controls {
+	float: right;
+	width: 487px;
 }
 
 #closetree {
 	float: left;
 }
 #show-d3 {
-	float: right;
+	/* float: right; */
 }
 
 /* Arbol de mensajes de un hilo */
