--- a/css/dialog.css
+++ b/css/dialog.css
@@ -19,10 +19,11 @@
 	box-shadow: -3px 2px 8px 0px rgba(50, 50, 50, 0.75);
 }
 .dlg_msg {
-	font-size: 1.3em;
+	font-size: 1.6em;
+	color:  black;
 }
 .dlg_extra {
-	border-top: 1px solid #ccc;
+	/* border-top: 1px solid #ccc; */
 	margin-top: 10px;
 	max-height: 300px;
 	overflow-y: scroll;
@@ -34,10 +35,11 @@
 	min-width: 50px;
 	text-align: center;
 	cursor: pointer;
-	margin-right: 20px;
+	margin-right: 10px;
 	margin-top: 10px;
-	padding: 3px;
+	padding: 9px;
 	font-size: 12px;
+	text-transform: uppercase;
 }
 
 .dlg .btn:hover {
@@ -113,8 +115,8 @@
 .themes-list .theme-item {
 	display: block;
 	list-style: none;
-	background-color: #fff;
-	padding: 5px;	
+	/* background-color: #fff; */
+	padding: 10px 0;	
 	border-top: 1px solid #ccc;
 	-webkit-transition: background-color .2s ease;
 	   -moz-transition: background-color .2s ease;
@@ -129,7 +131,10 @@
 	color: #ccc;
 }
 .themes-list .theme-item:before {
-	margin-right: 5px;
+	margin-right: 2px;
+	font-size: 17px;
+	width:  20px;
+	display:  inline-block;
 }
 .themes-list .theme-item:after {
 	display: block;
@@ -142,15 +147,23 @@
 .theme-name {
 	display: inline-block;;
 	margin-bottom: 3px;
-	font-weight: bold;
+	font-weight: normal;
+	color:  black;
+	font-size:  16px;
+	margin-bottom: 4px;
 }
 .theme-image {
 	clear: both;
 	float: right;
-	width: 60px;
+	width: 68px;
 	margin: 2px;
 }
 .theme-description {
 	font-size: 12px;
 	display: block;
+	padding-left: 23px;
+	line-height:  16px;
+	display: -webkit-box;   
+	-webkit-line-clamp: 2;   -webkit-box-orient: vertical;
+	overflow: hidden;
 }
