--- a/css/popup.css
+++ b/css/popup.css
@@ -416,7 +416,7 @@ ul.navigator li:hover {
 	padding: 10px;
 }
 #edit-section h1 {
-	background-color: #666;
+	background-color: #f3e4dd;
 	color: #fff;
 	text-align: center;
 	font-size: 14px;
