--- a/css/popup.css
+++ b/css/popup.css
@@ -31,6 +31,7 @@ body {
 .fa:before {
 	font-family: 'fontawesome';
 }
+
 .container {
 	
 }
@@ -40,7 +41,7 @@ body {
 	height: 0;
 	width: 100%;
 	position: absolute;
-	top: 50px;
+	top: 47px;
 	overflow: hidden;
 	transition: height .25s linear;
 	z-index: 300;
@@ -67,7 +68,7 @@ ul.navigator {
 	font-weight: 300;
 	margin: 3px 0;
 	max-height: 300px;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 ul.navigator li {
 	overflow: hidden;
@@ -86,12 +87,19 @@ ul.navigator li:hover {
 	color: white;
 }
 
+#thm-section {
+	margin-top: 0.8em;
+	
+}
+
 #header {
-	height: 30px;
-	padding: 10px 5px;
+	height: 37px;
+	padding: 5px 5px;
 	background-color: #004862;
 	color: #fff;
 	position: relative;
+	
+	vertical-align:  top;
 }
 #header-menu {
 	position: absolute;
@@ -119,19 +127,24 @@ ul.navigator li:hover {
 	border-bottom: 2px solid #fff;
 }
 #user-avatar {
-	width: 30px;
+	width: 35px;
 	border: 1px solid #fff;
+	/* border-radius:  20px; */
+	/* display: inline-block; */
+	/* vertical-align: middle; */
+	float:  left;
+	margin-right:  5px;
 }
 #header span {
-	display: inline-block;
+	/* display: inline-block; */
 }
 #user-nickname {
 	font-weight: 400;
-	font-size: 25px;
+	font-size: 27px;
 }
 #user-fullname {
 	font-weight: 200;
-	font-size: 20px;
+	font-size: 16px;
 }
 
 #navigation {
@@ -159,19 +172,19 @@ ul.navigator li:hover {
 	top:0;
 	left: 0;
 	right: 0;
-	padding: 10px;
+	padding: 5px;
 }
 
 #messages-header {
-	background-color: rgba(100,100,100,.7);
+	background-color: rgba(100,100,100,.9);
 	z-index: 100;
 	border-bottom: 1px solid #fff;
 	transition: all .25s ease;
 	overflow: hidden;
-	height: 20px;
+	height: 27px;
 }
 #messages-header.on {
-	background-color: rgba(50,50,50,.85);
+	background-color: rgba(50,50,50,.95);
 	height: 260px;
 }
 #messages-header .search {
@@ -184,7 +197,7 @@ ul.navigator li:hover {
 	outline: none;
 	background-color: #666;
 	color: #fff;
-	margin: 0;
+	/* margin: 0; */
 	/* border-top-right-radius: 3px; */
 	/* border-bottom-right-radius: 3px; */
 	cursor: pointer;
@@ -212,23 +225,27 @@ ul.navigator li:hover {
 }
 
 #board-title {
-	text-shadow: 1px 1px 5px rgb(150, 150, 150);
-	overflow: hidden;
+	text-shadow: 0 0 5px rgba(0, 0, 0, .8);
+	/* overflow: hidden; */
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	cursor: pointer;
 	font-size: 16px;
+	margin-top:  4px;
+	margin-left:  5px;
 }
 #board-title:before {
 	display:inline-block;
 	margin-right: 5px;
 	transition: all .25s ease;
+	/* margin-top:  0; */
 }
 #board-description {
 	clear: both;
 	font-weight: 200;
 	font-size: 12px;
 	margin-top: 20px;
+	margin-left: 6px;
 }
 
 #messages-header.on #board-title:before {
@@ -242,13 +259,18 @@ ul.navigator li:hover {
 }
 #board-description p {
 	height: 100px;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 #board-description .links {
 	float: left;
 	padding: 0;
 	margin: 0;
+	list-style-type: none;
+	max-width: 290px;
+	/* outline: 1px solid red; */
+	height: 96px;
+	overflow-y: auto;
 }
 #board-description .links:before {
 	content: "Más información:";
@@ -258,13 +280,13 @@ ul.navigator li:hover {
 #board-description .links li {
 	
 	padding: 2px;
-	border-top: 1px dotted #ccc;
+	/* border-top: 1px dotted #ccc; */
 }
 #board-description .links a {
 	text-decoration: none;
 	background-color: #555;
-	padding: 1px 5px;
-	display: block;
+	padding: 2px 3px;
+	display: inline-block;
 	color: #fff
 }
 #board-description .links a:hover {
@@ -284,17 +306,18 @@ ul.navigator li:hover {
 	margin-bottom: 5px;
 	color: #fff;
 	cursor: pointer;
-	font-size: 11px;
+	font-size: 10px;
 	position: relative;
 	width: 130px;
-	height: 20px;
+	height: 26px;
 	overflow: hidden;
+	text-transform: uppercase;
 }
 #board-description .control-item:hover:before {
 	top: -40px;
 }
 #board-description .control-item:hover:after {
-	top: 0;
+	top: 5px;
 }
 
 #board-description .control-item:before {
@@ -303,7 +326,7 @@ ul.navigator li:hover {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	top: 0;
+	top: 5px;
 	transition: top .25s ease;
 }
 #board-description .control-item:after {
@@ -312,7 +335,7 @@ ul.navigator li:hover {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	top: 40px;
+	top: 25px;
 	transition: top .25s ease;
 }
 #board-description .control-item.on {
@@ -351,7 +374,7 @@ ul.navigator li:hover {
 .board {
 	position: absolute;
 	top: 0px;
-	height: 440px;
+	height: 459px;
 	transition: left .5s ease;
 	width: 450px;
 	overflow-y: scroll;
@@ -610,7 +633,7 @@ span.time-tooltip span:first-child {
 	overflow: hidden;
 	transition: all .2s ease;
 	font-size: 12px;
-	color: #aaa;
+	color: #666;
 	padding: 3px;
 }
 .modal .msg_control, #replying-message .msg_control {
@@ -620,11 +643,15 @@ span.time-tooltip span:first-child {
 .msg_control:hover {
 	border: 1px solid #ccc;
 	background-color: #fff;
-	box-shadow: -3px 2px 8px 0px rgba(50, 50, 50, 0.75);
+	box-shadow: -3px 2px 8px 0px rgba(50, 50, 50, 0.3);
 }
 .msg_control:hover .btn {
 	display: block;
 }
+.msg_control .btn:hover i {
+	color: #000;
+}
+
 .msg_control:before {
 	color: #666;
 	font-size: 12px;
@@ -635,7 +662,7 @@ span.time-tooltip span:first-child {
 .msg_control .btn {
 	display: none;
 	cursor: pointer;
-	padding: 2px;
+	padding: 4px 2px;
 }
 
 .msg_control .btn:hover {
@@ -647,7 +674,7 @@ span.time-tooltip span:first-child {
 
 .msg_content {
 	line-height: 1.5em;
-	color: #666;
+	color: #222;
 	font-weight: 300;
 	margin-top: 10px;
 	word-wrap: break-word;
