--- a/css/dialog.css
+++ b/css/dialog.css
@@ -11,7 +11,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	width: 400px;
-	background-color: #f6f6f6;
+	background-color: #fff;
 	margin-top: 100px;
 	padding: 10px;
 	border: 1px solid #fff;
@@ -19,7 +19,7 @@
 	box-shadow: -3px 2px 8px 0px rgba(50, 50, 50, 0.75);
 }
 .dlg_msg {
-	font-size: 1.6em;
+	font-size: 16px;
 	color:  black;
 }
 .dlg_extra {
@@ -72,9 +72,9 @@
 	padding-right: 10px;
 }
 .links-list h1 {
-	padding: 2px;
-	font-size: 14px;
-	background-color: #666;
+	padding: 5px;
+	font-size: 12px;
+	background-color: #004862;
 	color: #fff;
 }
 
@@ -84,11 +84,13 @@
 	background-color: #fff;
 	padding: 2px;
 	margin-bottom: 3px;
-	border: 1px dotted #000;
+	/* border: 1px dotted #000; */
+	border: 1px solid #ddd;
 }
 
 .link-item:hover {
-	border-left: 2px solid #666;
+	background-color: #F25600;
+	color:#fff;
 }
 
 .link-item span {
@@ -99,7 +101,11 @@
 	text-overflow: ellipsis;
 }
 .link-title {
-	font-weight: bold;
+	margin-left: 15px;
+	color: #F25600;
+}
+.link-item:hover .link-title {
+	color:#fff;
 }
 .link-url {
 	padding-left: 10px;
@@ -166,4 +172,28 @@
 	display: -webkit-box;   
 	-webkit-line-clamp: 2;   -webkit-box-orient: vertical;
 	overflow: hidden;
+}
+
+/* Selector de imágenes */
+
+.images-selector h2 {
+	font-size: 14px;
+}
+
+.images-selector img {
+	height: 100px;
+	float: left;
+	margin: 5px;
+	cursor: pointer;
+	border: 2px solid #fff;
+}
+.images-selector img.on {
+	border-color: #F25600;
+	box-shadow: 0 1px 8px 0px rgba(242,86,0,1);
+}
+.images-selector img.small {
+	display: none;
+}
+.images-selector img:not(.on):hover {
+	outline: 2px solid #F25600;
 }
